--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,7 @@ steps:
 
 - task: AzureCLI@2
   inputs:
-    azureSubscription: 'your-azure-subscription'
+    azureSubscription: 'MCAPS-Hybrid-REQ-42154-2022-louisli'
     scriptType: 'bash'
     scriptLocation: 'inlineScript'
     inlineScript: |
