--- a/ml-pipelines/cli/train/pipeline.yml
+++ b/ml-pipelines/cli/train/pipeline.yml
@@ -30,7 +30,7 @@ jobs:
   prep_data:
     name: prep_data
     display_name: prep-data
-    code: ../../../component/prep
+    code: ../../../components/prep
     command: >-
       python prep.py 
       --raw_data ${{inputs.raw_data}} 
@@ -52,7 +52,7 @@ jobs:
   train_model:
     name: train_model
     display_name: train-model
-    code: ../../../component/train
+    code: ../../../components/train
     command: >-
       python train.py 
       --train_data ${{inputs.train_data}} 
@@ -66,7 +66,7 @@ jobs:
   evaluate_model:
     name: evaluate_model
     display_name: evaluate-model
-    code: ../../../component/evaluate
+    code: ../../../components/evaluate
     command: >-
       python evaluate.py 
       --model_name ${{inputs.model_name}} 
@@ -84,7 +84,7 @@ jobs:
   register_model:
     name: register_model
     display_name: register-model
-    code: ../../../component/register
+    code: ../../../components/register
     command: >-
       python register.py 
       --model_name ${{inputs.model_name}} 
