--- a/ci-cd/azure-pipelines/cli/deploy-sdkv2.yml
+++ b/ci-cd/azure-pipelines/cli/deploy-sdkv2.yml
@@ -26,6 +26,5 @@ steps:
     scriptType: 'bash'
     scriptLocation: 'inlineScript'
     inlineScript: |
-           sed -i -e "s/DefaultAzureCredential/AzureCliCredential/g" train-sdkv2.ipynb
-           papermill -k python deploy-online-endpoint-sdkv2.ipynb deploy-online-endpoint-sdkv2.output.ipynb
-    workingDirectory: 'ml-pipelines/sdk'
+           deploy-online-endpoint.sh
+    workingDirectory: 'ml-pipelines/cli'
