--- a/ci-cd/azure-pipelines/cli/train.yml
+++ b/ci-cd/azure-pipelines/cli/train.yml
@@ -26,6 +26,5 @@ steps:
     scriptType: 'bash'
     scriptLocation: 'inlineScript'
     inlineScript: |
-           sed -i -e "s/DefaultAzureCredential/AzureCliCredential/g" train-sdkv2.ipynb
-           papermill -k python train-sdkv2.ipynb train-sdkv2.output.ipynb
-    workingDirectory: 'ml-pipelines'
+      train.sh
+    workingDirectory: 'ml-pipelines/cli'
