--- a/ci-cd/azure-pipelines/cli/train.yml
+++ b/ci-cd/azure-pipelines/cli/train.yml
@@ -8,16 +8,16 @@ steps:
 - task: UsePythonVersion@0
   inputs:
     versionSpec: '3.8'
-- script: pip install -r ci-cd/dev-requirements.txt
+- script: pip install -r ci-cd/azure-pipelines/dev-requirements.txt
   displayName: 'pip install notebook reqs'
 - task: Bash@3
   inputs:
-    filePath: 'ci-cd/setup-sdk.sh'
+    filePath: 'ci-cd/azure-pipelines/setup-sdk.sh'
   displayName: 'set up sdk'
 
 - task: Bash@3
   inputs:
-    filePath: 'ci-cd/setup-cli.sh'
+    filePath: 'ci-cd/azure-pipelines/setup-cli.sh'
   displayName: 'set up CLI'
 
 - task: AzureCLI@2
